@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-751: Build error: convertEdgeToLine in two different classes have the 
+  same erasure, yet neither overrides the other (aarmax0 via claudio)
+
   GIRAPH-732: EdgeOutputFormat (aarmax00 via claudio)
 
   GIRAPH-512: JavaDoc warnings (tdn120 via nitay)
